tests/positive/pr118c_binary_inline_object.safe
package pr118c_binary_inline_object

   value : binary (8) = binary (8) (255)
   mask : binary (8) = binary (8) (15)

