tests/negative/neg_pr118c_implicit_integer_binary_mix.safe
package neg_pr118c_implicit_integer_binary_mix

   value : binary (8) = binary (8) (1) + 1

